--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,81 +1,39 @@
-body{
-    font-family: 'Montserrat', sans-serif;
-    padding: 0;
-    margin: 0;
+body {
+  /* font-family: "Montserrat", sans-serif; */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
-@media (min-width: 1020px) {
-.Wall{
+/* Desktop version */
+
+@media (min-width: 860px) {
+  .Wall {
     position: relative;
     z-index: -1;
-    opacity: 80%;
+    opacity: 100%;
     width: 100%;
     height: 600px;
     overflow: hidden;
     background-position-y: -200px;
     background-size: cover;
-    background-image: url('../img/landscape_mountains_lake_160353_1920x1080.jpg');
+    background-image: url("../img/landscape_mountains_lake_160353_1920x1080.jpg");
     box-shadow: black 2px 2px 2px;
     background-attachment: fixed;
-}
-}
+  }
 
-@media (max-width: 1000px) {
-    .Wall{
-        position: relative;
-        z-index: -1;
-        opacity: 80%;
-        width: 100%;
-        height: 600px;
-        overflow: hidden;
-        background-position-y: -100px;
-        background-position-x: -600px;
-        background-size: cover;
-        background-image: url('../img/landscape_mountains_lake_160353_1920x1080.jpg');
-        box-shadow: black 2px 2px 2px;
-        background-attachment: fixed;
-    }
-}
-
-.TESTE{
-    color: aqua;
-}
-
-.HomeP{
-    display: grid;
-    place-items: center;
-}
-
-.container{
+  .Wall::after {
+    content: "";
     position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    overflow: hidden;
-    text-align: center;
-}
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
 
-@media (min-width: 1020px) {
-.Search{
-    border-radius: 5px;
-    height: 35px;
-    border: none;
-    width: 300px;
-}
-}
-
-@media (max-width: 1000px) {
-    .Search{
-        border-radius: 5px;
-        height: 25px;
-        border: none;
-        width: 150px;
-}
-
-}
-
-@media (min-width: 1020px) {
-    .bnt-r{
+  .bnt-r {
     border-radius: 5px;
     background-color: #f5374d;
     border: none;
@@ -85,68 +43,362 @@ body{
     color: aliceblue;
     font-weight: bold;
     cursor: pointer;
+  }
+  .Search {
+    border-radius: 5px;
+    height: 35px;
+    border: none;
+    width: 350px;
+    text-align: center;
+  }
+  .containerInfos {
+    margin: 30px;
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2fr;
+  }
+  .container {
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    text-align: center;
+    position: absolute;
+  }
+  .titulo {
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    text-align: center;
+    position: absolute;
+    color: white;
+    font-size: 80px;
+    font-weight: bold;
+  }
+  .flooter {
+    width: 100%;
+    height: 60px;
+    background-color:  #f75c6e;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    
+}
+.accordion{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.testeDet{
+    position: fixed;
+    top: 0vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: #f75c6e;
+    width: 100%;
+}
+.testeDet .bnt-r{
+    border: solid white 1px;
+    font-weight: bold;
+}
+.detail{
+    padding-top: 80px;
+}
+.MAPA{
+    margin: 20px;
+    width: 90%;
+    height: 400px;
+}
+.title{
+    position: fixed;
+    top: 1.3vh;
+    z-index: 2;
+    color: white;
+    left: 2%;
+    font-weight: bolder;
+    font-size: larger;
+    font-size: 36px;
+}
+.navMob{
+    display: none;
+}
+.iconM{
+    display: none;
 }
 }
 
-@media (max-width: 1000px) {
-    .bnt-r{
+/* Mobile version */
+@media (max-width: 850px) {
+  .Wall {
+    position: relative;
+    z-index: -1;
+    opacity: 100%;
+    width: 100%;
+    height: 600px;
+    overflow: hidden;
+    background-position-y: -100px;
+    background-position-x: -600px;
+    background-size: cover;
+    background-image: url("../img/landscape_mountains_lake_160353_1920x1080.jpg");
+    box-shadow: black 2px 2px 2px;
+    background-attachment: fixed;
+  }
+  .Wall::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+
+  .containerInfos {
+    margin: 30px;
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
+    gap: 2fr;
+  }
+
+  .bnt-r {
     border-radius: 5px;
     background-color: #f5374d;
+    border: none;
+    height: 35px;
+    margin: 3px;
+    color: aliceblue;
+    font-weight: bold;
+    cursor: pointer;
+    content: "Search";
+    font-size: 15px;
+  }
+
+  .bnt-mobi {
+    border-radius: 5px;
+    background-color: #000000;
     border: none;
     height: 25px;
     margin: 15px;
     color: aliceblue;
     font-weight: bold;
     cursor: pointer;
-}
-}
+  }
 
-.infos{
-    height: 300px;
-    width: 300px;
-    background-color: white;
-    border-radius: 3px;
-    text-align: center;
-    display: grid;
-    place-items: center;
-    border: black thick 1px;
-}
-@media (max-width: 1000px) {
-    .containerInfos{
-    margin: 30px;
-    display: grid;
-    place-items: center;
-    grid-template-columns: repeat(auto-fill, minmax(310px,  1fr));
-    gap: 2fr;
-}
-}
-
-@media (min-width: 1020px) {
-    .containerInfos{
-    margin: 30px;
-    display: grid;
-    place-items: center;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2fr;
-}
-}
-
-
-.imgInf{
+  .Search {
     border-radius: 5px;
-    height: 180px;
-    width: 300px;
-}
-.text{
+    height: 35px;
+    border: none;
+    width: 210px;
+  }
+
+  .container {
+    top: 32%;
+    left: 15%;
+    position: absolute;
+    overflow: hidden;
+    text-align: center;
+  }
+  .teste {
+    top: 0vh;
+    margin-left: 60px;
+    position: fixed;
+    text-align: center;
+  }
+
+  .HomeInfo {
+    display: none;
+    overflow: auto;
+    position: absolute;
+    bottom: 0vh;
+    background-color: white;
+    height: 50vh;
+    width: 100vh;
+  }
+
+  .HomeActive {
+    display: block;
+    overflow: auto;
+    position: absolute;
+    bottom: 0vh;
+    background-color: black;
+    height: 50vh;
+    width: 100vh;
+  }
+
+  .accordion {
+    max-width: 100vh;
+  }
+
+  .accordion .contentBx {
+    position: relative;
+    margin: 3px 20px;
+    box-shadow: #ebebeb 1px 3px 5px;
+    justify-content: center;
+    padding-left: 10px;
+    text-justify: auto;
+    padding-top: 1px;
+    margin-top: 1px;
+  }
+
+  .accordion .contentBx .label {
+    position: relative;
+    padding: 5px;
+    cursor: pointer;
+    font-weight: inherit;
+    font-family: sans-serif;
+    margin-bottom: 0.3px;
+  }
+
+  .accordion .contentBx .label::before {
+    content: "+";
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    font-size: 1.5em;
+  }
+
+  .accordion .contentBx.active .label::before {
+    content: "-";
+  }
+
+  .accordion .contentBx .content {
+    position: relative;
+    padding: 5px;
+    height: 0px;
+    overflow: hidden;
+    transition: 0.5s;
+    overflow-y: auto;
+    color: white;
+  }
+
+  .accordion .contentBx.active .content {
+    height: 150px;
+    padding: 5px;
+    color: black;
+    font-weight: lighter;
+    font-size: 14px;
+    padding-left: 15px;
+  }
+  .testeDet {
+    top: 0vh;
+    text-align: center;
+    background-color: #f75c6e;
+    position: fixed;
+    width: 375px;
+    opacity: 100%;
+    overflow: hidden;
+    transition: 0.5;
+  }
+  .detail {
+    margin-top: 110px;
+  }
+  .testeDet .Search {
+    height: 36px;
+    width: 230px;
+    text-align: center;
+  }
+
+  .testeDet .bnt-r {
+    height: 40px;
+    width: 80px;
+    border: solid white 1px;
+  }
+  .testeDet .bnt-r::after {
+    font-weight: bold;
+  }
+  .MAPA {
+    height: 350px;
+    width: 335px;
+    margin: 20px;
+    margin-bottom: 60px;
+    z-index: -1;
+  }
+  .flooter {
+    width: 375px;
+    background-color: #f75c6e;
+    height: 50px;
+    text-align: center;
     display: flex;
     justify-content: center;
-    place-items: center;
-    height: 120px;
-    margin: 5px;
-    color: black;
+    color: white;
+    align-items: center;
+    font-size: 10px;
+    font-weight: bold;
+  }
+  .titulo {
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    text-align: center;
+    position: absolute;
+    color: white;
+    font-size: 50px;
+    font-weight: bold;
+  }
+  .title{
+      display: none;
+  }
+  .navMob{
+      position: fixed;
+      width: 100%;
+      bottom: 6vh;
+      display: flex;
+      background-color: #ffffff;
+      z-index: 2;
+      height: 43px;
+      justify-content: space-around;
+
+  }
+  .iconM{
+      border: solid #fa2152 1px;
+      padding-right: 40px;
+      padding-left: 40px;
+      height: 43px;
+  }
 }
 
-.MAPA{
-    height: 1000px;
-    width: 1000px;
+.HomeP {
+  display: grid;
+  place-items: center;
+}
+
+.infos {
+  height: 300px;
+  width: 300px;
+  background-color: white;
+  border-radius: 3px;
+  text-align: center;
+  display: grid;
+  place-items: center;
+  border: black thick 1px;
+}
+
+.imgInf {
+  border-radius: 5px;
+  height: 180px;
+  width: 300px;
+}
+.text {
+  display: flex;
+  justify-content: center;
+  place-items: center;
+  height: 120px;
+  margin: 5px;
+  color: black;
+}
+
+.quadrado {
+  height: 100vh;
+  right: 0;
+  width: 40vh;
+  background-color: white;
+  background: white;
+  position: fixed;
 }
